# QwenMaid

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: qwen-code-token-limits-gap.md  qwenCodeProviderPresets.ts  todo.md
docs/design/: 00-overview.md  01-proxy-engine.md  02-api-transformation.md  03-context-compression.md  04-cost-tracking.md  05-config-management.md  06-session-analysis.md  07-skill-mcp-hooks.md  08-search-integration.md  09-memory-management.md  10-frontend-layout.md  qwen-code-settings-reference.md  statusline-metrics-tracker.md
docs/provider-docs/: mimo.md  opencode-go.md  讯飞.md
docs/superpowers/plans/: 2026-06-04-analytics-detail.md  (+1 more)
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/resources/: provider-presets-review.json  provider-presets.json
src-tauri/resources/cli/: statusline.cmd
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: analytics.rs  filesystem.rs  installer.rs  metrics.rs  mod.rs  skill_marketplace.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs  providers.rs
src-tauri/src/mcp/: engines.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/presets/: mod.rs
src-tauri/src/proxy/: auth.rs  client_pool.rs  compression.rs  engine.rs  mod.rs  routing.rs  usage.rs
src/components/ui/: Toast.tsx  (+1 more)
src/hooks/: useConfiguredModels.ts  useDismiss.ts  useFocusTrap.ts  useProviders.ts
src/lib/: storage.ts  tauri.ts
(+24 files in other folders)
