[package]
name = "agentbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "agentbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime (tauri 2 already brings tokio, but we need full features)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }

# HTTP proxy server
axum = { version = "0.8", features = ["macros"] }

# Upstream HTTP client
reqwest = { version = "0.12", features = ["stream", "json"] }

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
http = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dirs = "6"
futures = "0.3"
zip = "2"
urlencoding = "2"
quick-xml = "0.36"
regex = "1"

# Context compression (headroom lite)
only-cc-lite = { git = "https://github.com/daidaiJ/only-cc-lite" }

[dev-dependencies]
# 仅测试时编译，不影响 release 构建时间
